correct dark mode

--- a/style.css
+++ b/style.css
@@ -126,7 +126,6 @@ ul {
   vertical-align: middle;
 }
 
-
 [data-theme="dark"] {
   background-color: #111 !important;
   color: #eee;
@@ -142,4 +141,16 @@ ul {
 
 [data-theme="dark"] .bg-black {
   background-color: #eee !important;
+}
+
+[data-theme="dark"] .nav-link {
+  color: #eee !important;
+}
+
+[data-theme="dark"] .text-dark {
+  color: #eee !important;
+}
+
+[data-theme="dark"] .navbar-brand {
+  color: #eee !important;
 }
